# satrap

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  phrases.txt  pyproject.toml  todo-schema.json  todo.json  verifier-schema.json
.ai/: todo.md
.satrap/: todo.json
satrap/: .gitignore  __init__.py  __main__.py  agents.py  claude_cli.py  cli.py  dag.py  git_ops.py  orchestrator.py  phrases.py  render.py  tmux.py  todo.py
tasks/: lessons.md  todo.md
tests/: test_agents.py  test_claude_cli.py  test_cli.py  test_dag.py  test_entrypoints.py  test_git_ops.py  test_orchestrator.py  test_phrases.py  test_render.py  test_todo.py
