[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satrap"
version = "0.1.0"
description = "Recursive agentic CLI orchestrator for academic research workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
satrap = "satrap.cli:main"

[tool.setuptools]
include-package-data = true
